fixed logo size on mobile

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ footer{
   .header{
     margin-bottom: 55px;
   }
-  .logo{
+  .logo img{
     width: 50%;
   }
   .illustration-mockups img{
